update for lisiting details

--- a/pages/listing-details.html
+++ b/pages/listing-details.html
@@ -28,29 +28,27 @@
     <link rel="stylesheet" href="../css/main/header.css">
     <link rel="stylesheet" href="../css/main/footer.css">
     <link rel="stylesheet" href="../css/main/getStarted.css">
+    <link rel="stylesheet" href="../css/pages/listingDetails.css">
 
 </head>
 
 <body>
     <header id="header">
-
+        <!-- ... existing header content ... -->
     </header>
     <section id="getStarted">
 
 
     </section>
     <main>
-
-
+        <div class="listing-details">
+            <!-- Content will be dynamically generated -->
+        </div>
     </main>
-
 
     <footer id="footer">
 
     </footer>
-
-
-
 
     <!-- scripts -->
     <!-- JWT Decode -->
@@ -69,6 +67,7 @@
     
     <!-- Additional Scripts -->
     <script src="../js/main/getCategories.js"></script>
+    <script src="../js/pages/listingDetails.js"></script>
 
 </body>
 
