last-all-listing-error

--- a/pages/home.html
+++ b/pages/home.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="../css/main/footer.css">
     <link rel="stylesheet" href="../css/main/getStarted.css">
     <link rel="stylesheet" href="../css/home/heroSection.css">
-    <link rel="stylesheet" href="../css/home/boostSection.css">
+    <!-- <link rel="stylesheet" href="../css/home/boostSection.css"> -->
 
     <!-- For Home Category swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
@@ -117,7 +117,7 @@
         </section>
 
 
-        <section id="boost-section" class="masry-boost">
+        <!-- <section id="boost-section" class="masry-boost">
             <div class="container">
                 <div class="masry-boost__grid">
                     <div class="masry-boost__card">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <section class="masry-cat-swiper">
