adding userListing page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -79,7 +79,7 @@
                                 </a>
                             </li>
                             <li class="profile-item">
-                                <a href="../pages/my-listing.html">
+                                <a href="../pages/userListings.html">
                                     <i class="fa-solid fa-list"></i>
                                     My Listing
                                 </a>
