--- a/pages/404.html
+++ b/pages/404.html
@@ -40,10 +40,17 @@
 
     </section>
 
-    
-    <main>
 
-
+    <main class="error-page">
+        <div class="container">
+            <div class="error-content text-center">
+                <h1 class="error-code">404</h1>
+                <h2 class="error-title">Page Not Found</h2>
+                <p class="error-message">Sorry, the page you are looking for might have been removed or is temporarily
+                    unavailable.</p>
+                <a href="/" class="btn btn-primary error-btn">Back to Home</a>
+            </div>
+        </div>
     </main>
 
 
@@ -68,13 +75,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom Scripts - Correct Order -->
-    <script src="../js/main/authService.js"></script>
-    <script src="../js/main/auth.js"></script>
-    <script src="../js/main/component.js"></script>
-
+ <!-- Important: Add type="module" to support ES modules -->
+ <script type="module" src="../js/services/authService.js"></script>
+ <script type="module" src="../js/main/component.js"></script>
+ <script type="module" src="../js/main/auth.js"></script>
     <!-- Additional Scripts -->
     <script src="../js/main/getCategories.js"></script>
 
+    <!-- Add error handling scripts -->
+    <script src="../js/main/errorHandling.js"></script>
+    <script src="../js/pages/404.js"></script>
 </body>
 
 </html>
