--- a/pages/addListing.html
+++ b/pages/addListing.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="../css/pages/addListing/main.css">
 
     <!-- Add Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_ACTUAL_API_KEY&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw6thoxZITqFU-HsZMnUu6p5hy3xc-gv0&libraries=places"></script>
 </head>
 
 <body>
